rename css class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body class="site">
+<body class="body">
     <header>Konwerter walut</header>
     <form class="form js-form">
         <fieldset>
