--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         min="0" required></label>
             </p>
             <p>
-                <label> <span class="form__labelText ">Wybierz walutę:</span>
+                <label>
+                    <span class="form__labelText ">Wybierz walutę:</span>
                     <select class="js-currency" name="currencyChoice">
                         <option value="EUR">Euro</option>
                         <option value="USD">Dolar amerykański</option>
