update result text, background photo: fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
             <p>
                 <button>Oblicz!</button>
-                <button type="reset">Zresetuj!</button>
+                <button type="reset" class="js-resetButton">Zresetuj!</button>
             </p>
         </fieldset>
     </form>
